# KTSB

./: .dockerignore  .env.example  .gitignore  DEBUG_WINDOWS_INSTALL.md  Dockerfile  Dockerfile.embedding  Dockerfile.frontend  Dockerfile.inner_voices  Dockerfile.voice  LICENSE  README.md  capability_map.yaml  convert_models.sh  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  kaare_api.py  kaare_argus.py  kaare_dev_meeting.py  kaare_fastpath.py  kaare_ha_gateway.py  kaare_miss_kare_nightjob.py  kaare_night_sequence.py  kaare_nightjob.py  kaare_reflection.py  kaare_reflection_runner.py  kaare_vaktmester.py  kaare_warmup.py  requirements.txt  setup.ps1  setup.sh
services/voice/kaare-wakeword/: .gitignore  README.md  cli.py  prepare.sh  pyproject.toml  run-preprocessing.sh
services/voice/kaare-wakeword/deploy/rpi-satellite/: pyproject.toml
services/voice/kaare-wakeword/docs/: QUICKSTART.md  README.md
services/voice/kaare-wakeword/docs/plans/: 2026-02-25-satellite-pipeline-design.md  2026-02-26-escalation-system-design.md  2026-02-26-escalation-system-plan.md  2026-02-27-kaare-v2-architecture-design.md  2026-02-27-kaare-v2-implementation.md  2026-02-28-reminders-design.md  2026-02-28-reminders-implementation.md  2026-03-17-wake-word-maker-design.md
services/voice/kaare-wakeword/inference/: common.py  run_coral.py  run_vim3.py
services/voice/kaare-wakeword/recorder/: server.py
services/voice/kaare-wakeword/recorder/static/: app.js  index.html  style.css  worklet.js
services/voice/kaare-wakeword/satellite/: __init__.py  audio.py  config.py  eou.py  http_server.py  leds.py  mdns.py  pipeline.py  streaming.py  vad.py  wakeword.py
services/voice/kaare-wakeword/scripts/: analyze_data.py  audio_config.py  augment.py  deploy_satellite.sh  generate_tts.py  prepare.py  preprocess.py  record.py  record_ambient.py  record_negative.py  trim_positives.py
services/voice/kaare-wakeword/server/: Modelfile.borealis-12b  __init__.py  api.py  config.py  escalation.py  ha.py  mdns.py  memory.py  nlu.py  registry.py  reminders.py  server.py  sonos.py  sonos_config.json  stt.py  system_prompt.txt  tts.py  websearch.py
services/voice/kaare-wakeword/server/tools/: ha_tool.py  time_tool.py
services/voice/kaare-wakeword/tests/satellite/: test_audio.py  test_eou.py  test_http_server.py  test_pipeline.py  test_pipeline_async.py  test_pipeline_integration.py  test_streaming.py  test_vad.py
services/voice/kaare-wakeword/tests/server/: test_api.py  test_escalation.py  test_ha.py  test_ha_tool.py  test_mdns.py  test_memory.py  test_nlu.py  test_registry.py  test_reminders.py  (+7 more)
services/voice/kaare-wakeword/training/: compile_edgetpu.sh  convert_vim3.sh  dataset.py  export_tflite.py  model.py  train.py
(+299 files in other folders)
